--- a/serverless.yml
+++ b/serverless.yml
@@ -10,7 +10,7 @@ provider:
   # https://serverless.com/framework/docs/providers/google/guide/credentials/
   #
   # the path to the credentials file needs to be absolute
-  credentials: ~/.gcloud/keyfile.json
+  credentials: ~/.gcloud/keyfile-dev.json
 
 plugins:
   - serverless-google-cloudfunctions
