Fix: Function names

--- a/serverless.yml
+++ b/serverless.yml
@@ -5,7 +5,7 @@ provider:
   stage: dev
   runtime: nodejs8
   region: us-central1
-  project: my-project
+  project: iconscout-dev-246510
   # The GCF credentials can be a little tricky to set up. Luckily we've documented this for you here:
   # https://serverless.com/framework/docs/providers/google/guide/credentials/
   #
@@ -24,11 +24,11 @@ package:
     - .git/**
 
 functions:
-  hello-world:
+  helloWorld:
     handler: helloWorld
     events:
       - http: path
-  image-resize:
+  imageResize:
     handler: imageResize
     events:
       - http: path
